# Programming-Parallel-Supercomputers

./: README.md
Exercise sheets/: sheet5_plot_figures.ipynb
Exercise sheets/sheet1/: README.ipynb  README.md
Exercise sheets/sheet2/: README.ipynb  README.md
Exercise sheets/sheet3/: README.md  advec_wave_2D_skel.c  phys_appl.md
Exercise sheets/sheet3_P2P/: plot_results.ipynb
Exercise sheets/sheet3_physical/: README.ipynb  advec_wave_2D_skel  advec_wave_2D_skel_template.c  job.sh  phys_appl.ipynb  prog.out
Exercise sheets/sheet4/: CMakeLists.txt  README.ipynb  README.md
Exercise sheets/sheet4_quicksort/: commands.txt  running_build.sh  running_dist.sh  running_dist_gpu.sh  running_gpu.sh  running_serial.sh
Exercise sheets/sheet4_quicksort/src/: CMakeLists.txt  main.cu  quicksort.cu  quicksort_distributed.cu  quicksort_gpu.cu
Exercise sheets/sheet5/: README.ipynb  README.md  job.sh
Exercise sheets/sheet5_baseline_MPI/: .gitignore  CODE_USAGE.md  job.sh  (+11 more)
GPU/: hello_class.cu  job_BA.sh  job_hello_class.sh  job_vecAdd_GPU.sh  running_script.txt  vecAdd_CPU.c
Hybrid/: MPIs_MPI_1.c  MPIs_MPI_3.c  job_MPIs_MPI_1.sh  job_MPIs_MPI_2.sh  job_MPIs_MPI_3.sh  job_OMP_MPI_1.sh  job_OMP_MPI_2.sh  job_hello.sh  running_script.txt
Lecture slides 2023/: MPI_commands.ipynb
Lectures slides/: MPI_commands.ipynb  commands.ipynb
MPI/: Comm_1.c  Datat_1.c  MPI_SR_1.c  MPI_SR_2.c  MPI_SR_3.c  MPI_SR_4.c  MPI_SR_6.c  MPI_SR_7.c  MPI_SR_8.c  One_sided_1.c  One_sided_2.c  One_sided_3.c  Split_2.c  job_Coll_1.sh  job_Comm_1.sh  job_Datat_1.sh  job_MPI_SR_1.sh  job_MPI_SR_2.sh  job_MPI_SR_3.sh  job_MPI_SR_4.sh  job_MPI_SR_5.sh  job_MPI_SR_6.sh  job_MPI_SR_7.sh  job_MPI_SR_8.sh  job_MPI_loctime.sh  job_MPI_loctime2.sh  job_One_sided_1.sh  job_One_sided_2.sh  job_One_sided_3.sh  job_Split_1.sh  job_Split_2.sh  job_hello_class.sh  job_synchro.sh  running_script.txt  synchro.c
Model solutions/: README.md
Model solutions/sheet4/src/: CMakeLists.txt  main.cu  quicksort.cu  quicksort_distributed.cu  quicksort_distributed_bcast.cu  quicksort_distributed_gpu.cu  quicksort_distributed_rdma.cu  quicksort_gpu.cu
exercise_sheets/sheet6/src/: CMakeLists.txt  reduce-multi.cu
instructions/: Triton_setup.txt  triton_subsmission_directory.txt
scripts/: job_CPU_example.sh  job_GPU_example.sh
(+300 files in other folders)
